base/src/test/resources/failure/tyck/issue292.aya.txt
In file $FILE:9:15 ->

  7 |   | false
  8 | 
  9 | def u : Nat => true
                     ^--^

Error: Cannot check the expression of type
         Bool
         (Normalized: Bool)
       against the type
         Nat
         (Normalized: Nat)
What are you doing?
